add include files

--- a/app/include/header.html
+++ b/app/include/header.html
@@ -13,8 +13,8 @@
         <div class="col-sm-5" id="projectName">
             <h4>Request Control Tool(RCT)</h4>
         </div>
-        <div id="loggedField">
-            Logged in as Donna Boucher |
+        <div id="loggedField" class="text-right">
+            Logged in as <span id="loggedName"></span> |
             <a href="#">Help </a>|
             <button onclick="backToLoginPage()">Sign Out</button>
         </div>
