--- a/css/index.css
+++ b/css/index.css
@@ -1,22 +1,6 @@
 .container {
-    max-width: 900px;
-    font-size: 12px;
-}
-
-input[type=text],
-input[type=password],
-input[type=button] {
-    padding: 10px 15px;
-    box-sizing: border-box;
-    border: 1px solid lightblue;
-    border-radius: 5px;
-}
-
-input[type=button] {
-    background-color: #265a88;
-    color: white;
-    margin-left: 100px;
-    width: 120%;
+    max-width: 1000px;
+    font-size: 14px;
 }
 
 #loginForm {
@@ -63,6 +47,36 @@ input[type=button] {
 table {
     margin-top: 20px;
 }
+
 footer .grayText {
     margin-top: 50px;
 }
+
+.redStar {
+    color: red;
+}
+
+.newRequestForm div {
+    margin-bottom: 15px;
+}
+
+.underline {
+    border-bottom: 2px solid #000000;
+    padding-bottom: 10px;
+}
+
+.underNavEmptyField {
+    height: 700px;
+}
+
+.inlineForm {
+    margin-top: 22px;
+}
+
+.newRCTButton {
+    margin-left: 30px;
+    width: 70px;
+}
+
+
+
